# lint-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint-bot.yml  lint.yml
aikit_lint/: __init__.py  __main__.py  strings.py
aikit_lint/formatters/: __init__.py  aikit_array.py  base_docstring.py  base_formatter.py  function_ordering.py
startai_lint/: __init__.py  __main__.py  strings.py
startai_lint/formatters/: __init__.py  base_formatter.py  function_ordering.py  startai_array.py
