[tool.poetry]
name = "lint-hook"
version = "1.0.0"
description = "Linting checker and formatter for aikit coding and docstring styles"
authors = ["Aikit Team <aikitdl.team@gmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
homepage = "https://github.com/khulnasoft/lint-hook"
repository = "https://github.com/khulnasoft/lint-hook"
packages = [{include = "aikit_lint"}]

[tool.poetry.dependencies]
python = "^3.8"
untokenize = "^0.1.1"
black = "^23.3.0"
networkx = "^3.0"

[tool.poetry.scripts]
aikit-lint = "aikit_lint.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
